Stage A: Prometheus + service-map. Tempo + Collector remote_write to Prom; Grafana gets Prom datasource, Service Map / Traces-to-Metrics on Tempo, dashboard with Node Graph and per-service RED + JVM panels